// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> with additional className matches its snapshot 1`] = `
<NavigationLink
  ariaLabel="Download the file"
  block={true}
  className="y-actionLink TEST_CLASSNAME"
  href="https://yammer.com"
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className=

            {
              margin-top: 0.4rem;
              position: static;
              top: 0px;
            }
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with href and ariaLabel matches its snapshot 1`] = `
<NavigationLink
  ariaLabel="Download file"
  block={true}
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className=

            {
              margin-top: 0.4rem;
              position: static;
              top: 0px;
            }
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with href matches its snapshot 1`] = `
<NavigationLink
  block={true}
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className=

            {
              margin-top: 0.4rem;
              position: static;
              top: 0px;
            }
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</NavigationLink>
`;

exports[`<ActionLink /> with onClick and ariaLabel matches its snapshot 1`] = `
<Clickable
  ariaLabel="Download file"
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className=

            {
              margin-top: 0.4rem;
              position: static;
              top: 0px;
            }
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</Clickable>
`;

exports[`<ActionLink /> with onClick matches its snapshot 1`] = `
<Clickable
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <Down
        block={true}
        className=

            {
              margin-top: 0.4rem;
              position: static;
              top: 0px;
            }
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn>
      <Block
        textSize="mediumSub"
      >
        Download
      </Block>
    </FixedGridColumn>
  </FixedGridRow>
</Clickable>
`;
